# reqif_pyxb_tryout

./: .gitignore  README.md  ReqIF.py  driver.py  export_test.py  import_test.py  main.py  pyproject.toml  test.reqif  test.xml
.github/workflows/: pythonpackage.yml
examples/: RMF_CustomerRequirementsSpecification.reqif  export_test.py  reference.reqif  xhtml_content_notes
raw/: ReqIF.py
reqif_pyxb/: ReqIF.py  _xh11d.py  driver.py
reqif_pyxb/raw/: ReqIF.py  _xh11d.py  driver.py
