[tool.poetry]
name = "reqif_pyxb"
version = "0.1.0"
description = "Python library for managing reqif xml files based on pyxb"
authors = ["Bavo Van Achte <bavo.van.achte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyxb = "^1.2.6"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
tox = "^3.14.6"
pylint = "^2.5.2"

[tool.pylint.messages_control]
disable = """,unused-wildcard-import, wildcard-import, invalid-name, R, multiple-statements, no-member,"""

[tool.pylint.master]
ignore = "raw, examples" # Doesn't seem to work yet. See https://github.com/PyCQA/pylint/issues/3630

[tool.pylint.format]
max-line-length = "120"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
